fixed spacing for about page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -305,6 +305,11 @@ form button:hover {
 }
 
 /* About Page */
+.team-members {
+    display: flex; /* Use flexbox to align items in a row */
+    justify-content: center; /* Center align the items horizontally */
+    gap: 20px; /* Add some space between the team members */
+  }
 .team-member {
     text-align: center;
     margin-bottom: 30px;
@@ -314,15 +319,14 @@ form button:hover {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    margin-bottom: 10px;
 }
 
 .team-member h2 {
-    margin-bottom: 5px;
+    margin: 0;
 }
 
 .team-member p {
-    margin-bottom: 10px;
+    margin: 5px 0;
 }
 
 @media screen and (max-width: 768px) {
